# code_astro_rri

./: README.md  beam_elimination_of_time_stamps.py  main.py  main_test.py  pyproject.toml  requirements.txt  testing.py
GARIB/: garib.py  h5py_file_open.py  testing.py
examples/: example.ipynb
